Agrego formulario de registro y botón en CV que lo redirige

--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
         </div>
       </div>
     </section>
+
+    <section class="cta container">
+      <h2 class="cta__title">¿Quieres registrarte?</h2>
+      <a href="sign_up.html" class="btn">Ir al Formulario</a>
+    </section>
   </main>
 
   <footer class="site-footer">
